updated some items on the UI

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <div class="wrapper">
                 <main class="page-content">
                     <div class="alert error">
-                        <p>Sorry, something went wrong. Try reloading the page.</p>
+                        <p>Sorry, It looks like something went wrong. Try reloading the page. If the page does not load, contact tamba.s.lamin@lamtech.sl</p>
                     </div>
                 </main>
             </div>
